# dhtrader

./: .agent-edit-guidelines.md  .editorconfig  .flake8  .gitignore  AGENTS.md  Apex_Drawdown_Observations.md  Apex_Live_Trade_Observations.md  CIRCULAR_IMPORTS_AGENT_IMPLEMENATION_PLAN.md  CIRCULAR_IMPORTS_STRATEGY.md  CODING_STANDARDS.md  README.md  __init__.py  conftest.py  dhcharts.py  dhcommon.py  dhindicators.py  dhmongo.py  dhstore.py  dhtrades.py  dhtypes.py  dhutil.py  docs_wsl.sh  mkdocs.sh  pycon.sh  pytest.ini  requirements.txt  setup.cfg  test.sh  testcandles.csv  use.py  use.sh  validate-file-quality.sh
.github/: copilot-instructions.md
docs/: dhcharts.html  dhmongo.html  dhstore.html  dhtrades.html  dhutil.html  es_market_era_analysis.md  index.html
githooks/: pre-commit
testdata/: __init__.py  ai_trades_long.csv  ai_trades_short.csv  build_testdata.py  calculate_ai_trades.py  compare_ai_vs_set1.py  extract_testdata.py  set1_metadata.json  testdata.md  testdata.py  trading_rules.md
tests/: __init__.py  conftest.py  hide_dhcharts_Symbol.py  test_data_2099_candles.csv  test_data_2099_candles_bad.csv  test_data_2099_candles_gaps.csv  test_data_read_2099_candles.csv  test_dhcharts.py  test_dhcharts_Candle.py  test_dhcharts_Chart.py  test_dhcharts_Day.py  test_dhcharts_Event.py  test_dhcharts_Indicator.py  test_dhcharts_Symbol.py  test_dhcommon.py  test_dhmongo.py  test_dhstore.py  test_dhstore_custom_document.py  test_dhtrades.py  test_dhtrades_Backtest.py  test_dhtrades_Trade.py  test_dhtrades_TradeSeries.py  test_dhtypes_Backtest.py  test_dhutil.py  (+11 more)
(+39 files in other folders)
