[metadata]
name = dhtrader
version = 1.0.0
description = Trading analysis and backtesting platform

[options]
python_requires = >=3.8
packages = find:

[tool:pytest]
testpaths = tests
markers =
    storage: marks tests that interact with storage
    slow: marks tests that run annoyingly slowly
    historical: marks tests that use real market data from testdata folder

[coverage:run]
source = .
omit =
    */venv/*
    */tests/*
    */.pytest_cache/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.
